--- a/configuration/templates/volunteering/verify-hours-fail.hbs
+++ b/configuration/templates/volunteering/verify-hours-fail.hbs
@@ -3,6 +3,7 @@
     <span class="fal fa-user-clock fa-3x"></span>
   </div>
   <p class="empty-title h5">Volunteering verification</p>
-  <p class="empty-subtitle">Verification has failed. Please <a href="mailto:{{>support_email_address}}">contact us</a> for assistance.</p>
-  <div class="empty-action"></div>
+  <p class="empty-subtitle">
+    Verification has failed. Please <a href="mailto:{{>support_email_address}}">contact us</a> for assistance.
+  </p>
 </div>
