--- a/configuration/templates/volunteering/verify-hours-pass.hbs
+++ b/configuration/templates/volunteering/verify-hours-pass.hbs
@@ -1,8 +1,9 @@
 <div class="empty">
   <div class="empty-icon">
-    <span class="fal fa-user-clock fa-3x"></span>
+    <span class="fal fa-user-check fa-3x"></span>
   </div>
   <p class="empty-title h5">Volunteering verification</p>
-  <p class="empty-subtitle">Volunteering verification successful.</p>
-  <div class="empty-action"></div>
+  <p class="empty-subtitle">
+    Volunteering verification successful. You can now close this page.
+  </p>
 </div>
