--- a/configuration/partials/page-title.hbs
+++ b/configuration/partials/page-title.hbs
@@ -3,24 +3,24 @@
 {{~#ifAny @root.route.metaData.title @root.route.metaData.adminTitle ~}}
 {{~#if @root.route.metaData.adminTitle ~}}
 {{@root.route.metaData.adminTitle}}
-{{~#compare location "head" ~}} – Saltire Awards{{~/compare ~}}
+{{#compare location "head" ~}} – Saltire Awards{{~/compare ~}}
 {{else}}
 {{~#if @root.route.metaData.title ~}}
 {{@root.route.metaData.title}}
-{{~#compare location "head" ~}} – Saltire Awards{{~/compare ~}}
+{{#compare location "head" ~}} – Saltire Awards{{~/compare ~}}
 {{~/if ~}}
 {{~/if ~}}
 {{else}}
-{{~#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
+{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
 {{~/ifAny~}}
 {{else}}
 {{~#compare @root.route.metaData.title "Home" ~}}
-{{~#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
+{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
 {{else}}
 {{~#if @root.route.metaData.title ~}}
-{{@root.route.metaData.title}}{{~#compare location "head"}} – Saltire Awards{{/compare ~}}
+{{@root.route.metaData.title}}{{#compare location "head"}} – Saltire Awards{{/compare ~}}
 {{else}}
-{{~#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
+{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
 {{~/if~}}
 {{~/compare ~}}
 {{~/if ~}}
