--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -65,11 +65,13 @@
             <form action="/submit-hours" method="POST" data-component="TasksTrigger" data-success-destination="/hours" data-TasksTrigger="ajax-form-handler">
               <input type="hidden" name="task_id" value="{{task_id}}">
               <label class="form-label" for="hours-{{task_id}}">
-                {{#compare hours ">" 0 ~}}
-                How many hours have you volunteered since the last time you logged hours?
-                {{else}}
-                How many hours have you volunteered since you started?
-                {{/compare ~}}
+                <strong>
+                  {{#compare hours ">" 0 ~}}
+                  How many hours have you volunteered since the last time you logged hours?
+                  {{else}}
+                  How many hours have you volunteered since you started?
+                  {{/compare ~}}
+                </strong>
               </label>
               <div class="input-group">
                 <input class="form-input input-lg" id="hours-{{task_id}}" name="hours" type="number" step="any" min="0" value="" placeholder="">
