update to link format

--- a/configuration/templates/volunteering/groups.hbs
+++ b/configuration/templates/volunteering/groups.hbs
@@ -21,7 +21,7 @@
     <div class="columns">
       <div class="column col-9">
         <h2>
-          <a href="/hours/{{task_id}}">Volunteering with {{{organisation_name}}}</a>
+          <a href="/hours/{{slugify organisation_name}}/{{task_id}}">Volunteering with {{{organisation_name}}}</a>
         </h2>
       </div>
     </div>
