--- a/src/main.scss
+++ b/src/main.scss
@@ -746,7 +746,7 @@ form {
 }
 
 ul.fa-ul {
-  margin-left: $unit*1.5;
+  margin-left: $unit*1.3333;
 }
 
 .faded-overflow {
@@ -764,7 +764,7 @@ ul.fa-ul {
   }
 }
 
-.contact.equal-height {
+.cards.equal-height {
   .column {
     padding-bottom: 0.8rem;
   }
