--- a/configuration/templates/page/contact.hbs
+++ b/configuration/templates/page/contact.hbs
@@ -1,4 +1,4 @@
-<div class="container contact equal-height">
+<div class="container contact cards equal-height">
   <!-- <h1>
     Contact us
   </h1> -->
