--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -207,7 +207,7 @@
             </div>
             <div class="column col-1">
               {{#if claim_code}}
-              <button type="submit" class="btn inline-update-button bg-dark" style="display:none;">Update</button>
+              <button type="submit" class="btn btn-primary inline-update-button" style="display:none;">Save</button>
               {{/if}}
             </div>
             <div class="column col-2">
