--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -262,22 +262,24 @@
         </aside>
       </div>
 
-      <div class="{{#if layoutParts.sidebar}}sidebar-present{{else}}sidebar-not-present{{/if}}">
-        {{#if layoutParts.sidebar ~}}
-          <div class="columns col-gapless">
-            <aside class="sidebar column col-2 col-lg-3 col-xl-3 hide-lg">
-              {{{layoutParts.sidebar}}}
-            </aside>
-            <main class="body column col-10 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
-              {{{layoutParts.body}}}
-            </main>
-          </div>
-        {{else}}
-          <main class="body">
+      {{#ifAll layoutParts.sidebar @root.data.accountInfo.user_type ~}}
+      <div class="sidebar-present">
+        <div class="columns col-gapless">
+          <aside class="sidebar column col-2 col-lg-3 col-xl-3 hide-lg">
+            {{{layoutParts.sidebar}}}
+          </aside>
+          <main class="body column col-10 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
             {{{layoutParts.body}}}
           </main>
-        {{/if ~}}
+        </div>
       </div>
+      {{else}}
+      <div class="sidebar-not-present">
+        <main class="body">
+          {{{layoutParts.body}}}
+        </main>
+      </div>
+      {{/ifAll ~}}
 
       <div id="toaster"></div>
 
