--- a/configuration/partials/opportunity/key-info.hbs
+++ b/configuration/partials/opportunity/key-info.hbs
@@ -5,22 +5,22 @@
     <div class="v-margin pull-right search-distance">
       {{#if distance ~}}
       {{#ifAll (compare distance "!==" "") (compare distance "!==" "Infinity") (compare distance "<=" @root.request.params.query.distance) ~}}
-      {{> volunteering_opportunity_location_distance distance=distance}}
+      {{> opportunity_location_distance distance=distance}}
       {{else}}
       {{#if (contains volunteersearch_type "Home-based volunteering") ~}}
-      {{> volunteering_opportunity_location_home}}
+      {{> opportunity_location_home}}
       {{else}}
       {{#ifAny (compare (getType advertised_areas) "string") (compare advertised_areas.length ">" 0) ~}}
-      {{> volunteering_opportunity_location_areas advertised_areas=advertised_areas}}
+      {{> opportunity_location_areas advertised_areas=advertised_areas}}
       {{/ifAny ~}}
       {{/if ~}}
       {{/ifAll ~}}
       {{else}}
       {{#compare distance "===" 0 ~}}
-      {{> volunteering_opportunity_location_distance distance=0.1}}
+      {{> opportunity_location_distance distance=0.1}}
       {{else}}
       {{#if (contains volunteersearch_type "Home-based volunteering") ~}}
-      {{> volunteering_opportunity_location_home}}
+      {{> opportunity_location_home}}
       {{/if ~}}
       {{/compare ~}}
       {{/if ~}}
@@ -28,12 +28,12 @@
     {{else}}
     {{#if (contains volunteersearch_type "Home-based volunteering") ~}}
     <div class="v-margin pull-right search-distance">
-      {{> volunteering_opportunity_location_home}}
+      {{> opportunity_location_home}}
     </div>
     {{/if ~}}
     {{/ifAll ~}}
     {{/ifAny ~}}
-    {{#compare @root.route.name "===" "volunteering_opportunity" ~}}
+    {{#compare @root.route.name "===" "opportunity" ~}}
     {{#compare type "full" ~}}
     {{#unless (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null) "") ~}}
     {{#ifAny @root.request.params.query.page @root.request.params.query.keywords @root.request.params.query.location ~}}
