--- a/configuration/templates/opportunity/opportunity.hbs
+++ b/configuration/templates/opportunity/opportunity.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  {{> volunteering_search_form}}
+  {{> opportunity_search_form}}
   {{#compare @root.data.supplimentaryResponses.opportunity.hits.total ">" 0 ~}}
   <div class="content-primary clearfix">
     {{#each @root.data.supplimentaryResponses.opportunity.hits.hits ~}}
