--- a/configuration/templates/opportunity/search.hbs
+++ b/configuration/templates/opportunity/search.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  {{> volunteering_search_form}}
+  {{> opportunity_search_form}}
   <div class="head">
     <div class="columns col-gapless">
       <div class="column col-4 action">
