fix to weirdness in account data

--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -443,12 +443,45 @@
               default: {
                 tasks: [
                   {
-                    type: "elementManipulator",
+                    name: "changeSalesforceEmail",
+                    type: "request",
+                    url: "/change-email",
+                    method: "POST",
+                    dataType: "json",
+                    data: {
+                      __template: `\{{{json key='email' value=(jquery '#change-email-email' 'val')}}}`,
+                      __parser: "json"
+                    }
+                  },
+                  {
+                    type: "switch",
                     config: {
-                      "#change-email-alert": { removeClass: "hidden" },
-                      "#change-email-alert .alert-message": { contents: "Email updated" },
-                      "#change-email-email": { value: "" },
-                      "#change-email-confirm": { value: "" }
+                    which: { __template: "\{{#if errors.changeSalesforceEmail}}error\{{/if}}" },
+                    branches: {
+                      default: {
+                        tasks: [
+                          {
+                            type: "elementManipulator",
+                            config: {
+                              "#change-email-alert": { removeClass: "hidden" },
+                              "#change-email-alert .alert-message": { contents: "Email updated" },
+                              "#change-email-email": { value: "" },
+                              "#change-email-confirm": { value: "" }
+                            }
+                          }
+                        ]
+                      },
+                      error: {
+                        tasks: [
+                          {
+                            type: "elementManipulator",
+                            config: {
+                              "#change-email-alert": { removeClass: "hidden" },
+                              "#change-email-alert .alert-message": { contents: { __template: "\{{errors.changeEmail.message}}" } }
+                            }
+                          }
+                        ]
+                      }
                     }
                   }
                 ]
