--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -98,6 +98,11 @@
         <div class="column col-9">
           <h2>
             Volunteering with {{{organisation_name}}}
+            {{#compare (length hours_list) ">" 0 ~}}
+            <a href="/task-csv/{{task_id}}/{{slugify organisation_name}}-volunteers.csv" class="pull-right btn btn-link">
+              <span class="fal fa-file-csv fa-2x"></span>
+            </a>
+            {{/compare ~}}
             {{!-- <span class="pull-right" data-collapse-target="#{{this.task_id}}-details">
               <span class="far fa-chevron-up" aria-hidden="false"></span>
             </span> --}}
