--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -99,7 +99,7 @@
           <h2>
             Volunteering with {{{organisation_name}}}
             {{#compare (length hours_list) ">" 0 ~}}
-            <a href="/task-csv/{{task_id}}/{{slugify organisation_name}}-volunteers.csv" class="pull-right btn btn-link" download>
+            <a href="/task-csv/{{task_id}}/{{slugify organisation_name}}-volunteers.csv" class="pull-right btn btn-link" title="Download a CSV file of names, certificate types, and claim codes" download>
               <span class="fas fa-file-csv fa-2x"></span>
             </a>
             {{/compare ~}}
