--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -17,9 +17,9 @@
         </div>
       </form>
 
-      <div class="divider"></div>
+      <div class="divider v-margin-full"></div>
 
-      <h2 class="t-margin-full">Settings</h2>
+      <h2>Settings</h2>
 
       <div class="columns">
         <div class="column col-6 form b-padding-full" id="change-password">
