--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -160,7 +160,7 @@
           <select class="form-select" id="un_sustainable_development_goals" name="un_sustainable_development_goals">
             <option value="" selected></option>
             {{#each @root.context.metaData.globalGoals ~}}
-            <option value="{{@key}}">{{@key}}: {{title}}</option>
+            <option value="{{title}}">{{@key}}: {{title}}</option>
             {{/each ~}}
           </select>
         </div>
