--- a/configuration/partials/emails/parental-approval-body.html
+++ b/configuration/partials/emails/parental-approval-body.html
@@ -177,7 +177,7 @@
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
                                           <p>Hello,</p>
                                           <p>This is an confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
-                                          <p>The {{@root.context.metaData.title}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
+                                          <p>{{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
                                           <p>As {{first_name}} is under 12, we require their parent or guardian to give permission to use the {{@root.context.metaData.title}} website. You can indicate that you give permission, by clicking on the link below</p>
                                           <a href="{{verification_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website</a>
                                           <p><a href="{{@root.context.metaData.url}}/about">Find out more about the {{@root.context.metaData.title}}</a>.</p>
