--- a/configuration/emails/parental-approval-body.mjml
+++ b/configuration/emails/parental-approval-body.mjml
@@ -12,7 +12,7 @@
           <mj-text font-size="16px" padding="0px" line-height="20px" color="#000000" font-family="Montserrat, Helvetica, Arial, sans-serif">
             <p>Hello,</p>
 
-            <p>This is an confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
+            <p>This is a confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
 
             <p>{{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
 
